allow gpu selection

--- a/notebooks/analysis/1_parsing.ipynb
+++ b/notebooks/analysis/1_parsing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,119 @@
    "metadata": {},
    "source": [
     "# Parsing scripts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser = DenovoEngineConverter.select(\"psm-utils\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yaml\n",
+    "config_path = \"/home/samva/Doctorate/DeNovo_Benchmark/configs/spectralis/spectralis_config.yaml\"\n",
+    "config = yaml.load(open(config_path), Loader=yaml.FullLoader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'binreclass_model_path': '/home/samva/Doctorate/data_directory/denovo_project/checkpoints/spectralis/spectralis_bin_reclass.pt',\n",
+       " 'scorer_path': '/home/samva/Doctorate/data_directory/denovo_project/checkpoints/spectralis/spectralis_score.pkl',\n",
+       " 'BATCH_SIZE': 16,\n",
+       " 'BIN_RESOLUTION': 1,\n",
+       " 'MAX_MZ_BIN': 2000,\n",
+       " 'N_CHANNELS': 24,\n",
+       " 'N_CONVS': 16,\n",
+       " 'DROPOUT': 0.35108249289592314,\n",
+       " 'KERNEL_SIZE': 3,\n",
+       " 'BATCH_NORM': True,\n",
+       " 'ION_TYPES': ['y', 'b'],\n",
+       " 'ION_CHARGES': [1],\n",
+       " 'ADD_INPUT_TO_END': True,\n",
+       " 'add_intensity_diff': False,\n",
+       " 'add_precursor_range': False,\n",
+       " 'log_transform': False,\n",
+       " 'sqrt_transform': False,\n",
+       " 'add_leftmost_rightmost': True,\n",
+       " 'focal_loss': True,\n",
+       " 'learning_rate': 4e-05,\n",
+       " 'n_epochs': 30,\n",
+       " 'bin_prob_threshold': 0.35,\n",
+       " 'input_bin_weight': 0.1,\n",
+       " 'change_prob_thresholds': [0.3, 0.4, 0.45, 0.5, 0.55, 0.6],\n",
+       " 'max_delta_ppm': 2e-05,\n",
+       " 'min_intensity': 0.02,\n",
+       " 'POPULATION_SIZE': 64,\n",
+       " 'ELITE_RATIO': 0.3,\n",
+       " 'NUM_GEN': 2,\n",
+       " 'TEMPERATURE': 10,\n",
+       " 'MIN_SCORE': -2,\n",
+       " 'MAX_SCORE': -1,\n",
+       " 'cache_scores': True,\n",
+       " 'num_cores': 8,\n",
+       " 'write_pop_to_file': False,\n",
+       " 'prosit_ce': 0.32,\n",
+       " 'verbose': True,\n",
+       " 'interpret_c_as_fix': True}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "pattern = r'\\[([^\\]]+)\\]'\n",
+    "\n",
+    "mods = parser.parse(\n",
+    "    result_path=\"/home/samva/Doctorate/data_directory/denovo_project/search_results/XTandem_percolator/F01_Fraction1.pout\",\n",
+    "    mgf_path=None\n",
+    ").to_dataframe().peptidoform.apply(lambda x: list(set(re.findall(pattern, x.proforma))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['42.01057', '-18.01056', '57.02147', '15.99492', '-17.02655']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import chain\n",
+    "list(set(chain(*mods.tolist())))"
    ]
   },
   {
@@ -153,15 +266,6 @@
     "    root_mgf=root_mgf,\n",
     "    denovo=\"pepnovo\"\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluation_metrics[\"pepnovo\"] = metrics_pepnovo"
    ]
   },
   {
@@ -963,7 +1067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
