Add preliminary analyses

--- a/notebooks/analysis/2_exploration.ipynb
+++ b/notebooks/analysis/2_exploration.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "from denovo_utils.parsers.converters import SpectralisParser, DenovoEngineConverter\n",
+    "from denovo_utils.analysis.pandas_utils import (\n",
+    "    get_decoy_status,\n",
+    "    collapse_casanovo_score,\n",
+    "    get_spectralis_score,\n",
+    "    get_psm_type,\n",
+    "    amino_acid_converter,\n",
+    "    drop_charge\n",
+    ")\n",
     "import pandas as pd\n",
     "import os\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "from psm_utils import PSMList, PSM"
    ]
   },
   {
@@ -23,53 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "filename=\"F06\"\n",
+    "\n",
     "root_data=\"/home/samva/Doctorate/data_directory/denovo_project\"\n",
-    "mgf_path=os.path.join(root_data, \"mgf_filtered/F06.mgf\")\n",
-    "\n",
-    "results_dir=os.path.join(root_data, \"denovo_results\")\n",
-    "\n",
-    "# Decoys from XTandem\n",
-    "results_dir_decoy = os.path.join(root_data, \"search_results/XTandem_decoy\")"
+    "mgf_path=os.path.join(root_data, \"mgf_filtered\", filename + \".mgf\")\n",
+    "results_dir=os.path.join(root_data, \"denovo_results\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['percolator']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10451/10451 [00:00<00:00, 162477.00it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "parser_spectralis_decoys = SpectralisParser(\n",
-    "    mgf_path=mgf_path,\n",
-    "    results_dir=results_dir_decoy\n",
-    ")\n",
-    "\n",
-    "parser_spectralis_decoys.parse(\n",
-    "    path_spectralis=\"/home/samva/Doctorate/data_directory/denovo_project/search_results/XTandem_decoy/spectralis/F06_annotated_rescoring.csv\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -83,14 +60,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 80842/80842 [00:02<00:00, 32934.00it/s]\n",
-      "100%|██████████| 80842/80842 [00:00<00:00, 163077.72it/s]\n",
-      "100%|██████████| 80759/80759 [00:02<00:00, 39062.27it/s]\n",
-      "100%|██████████| 80759/80759 [00:00<00:00, 164607.64it/s]\n",
-      "100%|██████████| 83186/83186 [00:01<00:00, 47733.80it/s]\n",
-      "100%|██████████| 83186/83186 [00:00<00:00, 165986.47it/s]\n",
-      "100%|██████████| 40545/40545 [00:00<00:00, 43265.89it/s]\n",
-      "100%|██████████| 40545/40545 [00:00<00:00, 162651.09it/s]\n"
+      "100%|██████████| 80842/80842 [00:02<00:00, 40323.74it/s]\n",
+      "100%|██████████| 80842/80842 [00:00<00:00, 169745.56it/s]\n",
+      "100%|██████████| 80759/80759 [00:03<00:00, 20680.11it/s]\n",
+      "100%|██████████| 80759/80759 [00:00<00:00, 164924.78it/s]\n",
+      "100%|██████████| 83186/83186 [00:01<00:00, 48613.08it/s]\n",
+      "100%|██████████| 83186/83186 [00:00<00:00, 164381.46it/s]\n",
+      "100%|██████████| 40545/40545 [00:00<00:00, 46095.95it/s]\n",
+      "100%|██████████| 40545/40545 [00:00<00:00, 163030.62it/s]\n"
      ]
     },
     {
@@ -104,26 +81,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 79457/79457 [00:05<00:00, 15412.02it/s]\n",
-      "100%|██████████| 78630/78630 [00:00<00:00, 159729.81it/s]\n",
-      "100%|██████████| 80955/80955 [00:01<00:00, 41376.93it/s]\n",
-      "100%|██████████| 80955/80955 [00:00<00:00, 160871.35it/s]\n",
-      "100%|██████████| 67487/67487 [00:04<00:00, 16537.59it/s]\n",
-      "100%|██████████| 67487/67487 [00:00<00:00, 159846.06it/s]\n"
+      "100%|██████████| 79457/79457 [00:03<00:00, 24387.99it/s]\n",
+      "100%|██████████| 78630/78630 [00:00<00:00, 167242.21it/s]\n",
+      "100%|██████████| 80955/80955 [00:01<00:00, 41584.07it/s]\n",
+      "100%|██████████| 80955/80955 [00:00<00:00, 164559.08it/s]\n",
+      "100%|██████████| 67487/67487 [00:01<00:00, 41915.54it/s]\n",
+      "100%|██████████| 67487/67487 [00:00<00:00, 165261.85it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['percolator']\n"
+      "['sage']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 65351/65351 [00:00<00:00, 157049.33it/s]\n"
+      "100%|██████████| 76181/76181 [00:00<00:00, 154061.25it/s]\n"
      ]
     }
    ],
@@ -133,28 +110,34 @@
     "    results_dir=results_dir\n",
     ")\n",
     "\n",
+    "# Casanovo, instanovo, pepnet, contranovo ran together\n",
     "parser_spectralis.parse(\n",
     "    path_spectralis=os.path.join(\n",
     "        results_dir,\n",
-    "        \"refinement/spectralis/pt1/F06_annotated_rescoring.csv\"\n",
+    "        \"refinement/spectralis/pt1\", filename + \"_annotated_rescoring.csv\"\n",
     "    )\n",
     ")\n",
+    "\n",
+    "# NovoB, Novor, PepNovo+ ran together\n",
     "parser_spectralis.parse(\n",
     "    path_spectralis=os.path.join(\n",
     "        results_dir,\n",
-    "        \"refinement/spectralis/pt2/F06_annotated_rescoring.csv\"\n",
+    "        \"refinement/spectralis/pt2\", filename + \"_annotated_rescoring.csv\"\n",
     "    )\n",
     ")\n",
+    "\n",
+    "# Sage results ran separately\n",
     "parser_spectralis.parse(\n",
     "    path_spectralis=os.path.join(\n",
-    "        \"/home/samva/Doctorate/data_directory/denovo_project/search_results/XTandem_spectralis/percolator/F06_annotated_rescoring.csv\"\n",
+    "        results_dir,\n",
+    "        \"refinement/spectralis/pt3\", filename + \"_annotated_rescoring.csv\"\n",
     "    )\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -167,10 +150,11 @@
        " 'NovoB': True,\n",
        " 'Novor': True,\n",
        " 'PepNovo+': True,\n",
-       " 'percolator': True}"
+       " 'percolator': False,\n",
+       " 'sage': True}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,71 +165,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "psmlist_all = parser_spectralis.psmlist + parser_spectralis_decoys.psmlist"
+    "df = parser_spectralis.dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do some preprocessing of the data:\n",
+    "- Collapse casanovo and contranovo scores (as negative predictions point to peptides not matching the precursor mass)?\n",
+    "- Get spectralis scores\n",
+    "- Get psm type\n",
+    "- Preprocess the sequence predictions so:\n",
+    "    - I -> L\n",
+    "    - N[UNIMOD:7] -> D\n",
+    "    - Q[UNIMOD:7] -> E\n",
+    "- Drop other modification predictions ? As these might not be compatible with spectralis scoring"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = psmlist_all.to_dataframe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_spectralis_score(row):\n",
-    "    try:\n",
-    "        return row[\"rescoring_features\"][\"spectralis_score\"]\n",
-    "    except:\n",
-    "        return None\n",
-    "df[\"spectralis_score\"] = df.apply(get_spectralis_score, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def collapse_casanovo_score(row):\n",
-    "    if (row[\"source\"] in [\"Casanovo4.2.0\", \"ContraNovo\"]) & (row[\"score\"]<0):\n",
-    "        return 1+row[\"score\"]\n",
-    "    return row[\"score\"]\n",
+    "mapping_aa = {\n",
+    "    \"I\": \"L\",\n",
+    "    \"N[UNIMOD:7]\": \"D\",\n",
+    "    \"Q[UNIMOD:7]\": \"E\"\n",
+    "}\n",
     "\n",
-    "df[\"score\"] = df.apply(collapse_casanovo_score, axis=1)"
+    "df[\"spectralis_score\"] = df.apply(get_spectralis_score, axis=1)\n",
+    "df[\"score\"] = df.apply(collapse_casanovo_score, axis=1)\n",
+    "df[\"psm_type\"] = df.apply(get_psm_type, axis=1)\n",
+    "\n",
+    "df[\"peptidoform\"] = df.apply(drop_charge, axis=1)\n",
+    "df[\"peptide\"] = df.apply(\n",
+    "    lambda x: amino_acid_converter(x, mapping_aa),\n",
+    "    axis=1\n",
+    ")\n",
+    "df[\"peptide\"] = df.apply(lambda x: x[\"peptide\"].proforma, axis=1)\n",
+    "\n",
+    "# Prevent PSM-pydantic errors\n",
+    "df[\"rank\"] = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_decoy_status(row):\n",
-    "    if row[\"source\"] != \"percolator\":\n",
-    "        return None\n",
-    "    proteins = row[\"protein_list\"]\n",
-    "    for protein in proteins:\n",
-    "        if \"decoy\" in protein:\n",
-    "            return True\n",
-    "    return False\n",
-    "\n",
-    "df[\"is_decoy\"] = df.apply(get_decoy_status, axis=1)"
+    "df.to_pickle(filename+\"_merged.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -278,6 +265,13 @@
    "outputs": [],
    "source": [
     "df.to_pickle(\"psms_merged.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -1369,13 +1363,6 @@
    "source": [
     "Seems like the casanovo scores correlate best with the scores from the search engine"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
