add analysis notebooks and scripts

--- a/notebooks/analysis/4_accuracy_recall.ipynb
+++ b/notebooks/analysis/4_accuracy_recall.ipynb
@@ -17,7 +17,7 @@
     "from tqdm import tqdm\n",
     "from denovo_utils.analysis.mixture_models import assign_ggm_clusters, plot_cluster_psmtype, get_ggm_n_clusters\n",
     "\n",
-    "from denovo_utils.analysis.evaluation import get_precision_metrics\n",
+    "from denovo_utils.analysis.evaluation import get_precision_coverage_df\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -405,13 +405,13 @@
     "        x=1\n",
     "        y-=4\n",
     "\n",
-    "    metrics_score = get_precision_metrics(\n",
+    "    metrics_score = get_precision_coverage_df(\n",
     "        df,\n",
     "        source=engine,\n",
     "        score_col=\"score\",\n",
     "        ground_truth_source=\"sage\",\n",
     "    )\n",
-    "    metrics_spectralis = get_precision_metrics(\n",
+    "    metrics_spectralis = get_precision_coverage_df(\n",
     "        df,\n",
     "        source=engine,\n",
     "        score_col=\"spectralis_score\",\n",
@@ -792,6 +792,11 @@
     "plt.title(\"Precision-coverage plot with de novo scores\")\n",
     "plt.legend(title=\"De novo engine\", bbox_to_anchor=(1.05, 1), loc='upper left')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
