--- a/notebooks/analysis/2_exploration.ipynb
+++ b/notebooks/analysis/2_exploration.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from denovo_utils.parsers.converters import SpectralisParser, DenovoEngineConverter\n",
-    "from denovo_utils.analysis.pandas_utils import (\n",
+    "from denovo_utils.utils.pandas import (\n",
     "    get_decoy_status,\n",
     "    collapse_casanovo_score,\n",
     "    get_spectralis_score,\n",
