--- a/notebooks/analysis/3_FDR.ipynb
+++ b/notebooks/analysis/3_FDR.ipynb
@@ -16,7 +16,7 @@
     "from psm_utils import PSM, PSMList\n",
     "from tqdm import tqdm\n",
     "from denovo_utils.analysis.mixture_models import assign_ggm_clusters, plot_cluster_psmtype, get_ggm_n_clusters\n",
-    "from denovo_utils.analysis.pandas_utils import get_psm_type"
+    "from denovo_utils.utils.pandas import get_psm_type"
    ]
   },
   {
