--- a/notebooks/analysis/7_rescoring_percolator.ipynb
+++ b/notebooks/analysis/7_rescoring_percolator.ipynb
@@ -42,7 +42,7 @@
     "    ms2pip_correlation,\n",
     ")\n",
     "\n",
-    "from denovo_utils.analysis.pandas_utils import get_psm_type\n",
+    "from denovo_utils.utils.pandas import get_psm_type\n",
     "import seaborn as sns\n",
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline"
